<resources>
    <string name="app_name">My Form App</string>
    <string name="apellidos">Apellidos</string>
    <string name="nombres">Nombres:</string>
    <string name="dni">DNI:</string>
    <string name="correo">Correo:</string>
    <string name="telefono">Telefono:</string>
    <string name="register">Registrarse</string>
    <string name="Registrarse">Registrarse</string>
    <string name="direccion">Direccion:</string>
</resources>
